Bugfix on demo component z-index

--- a/src/components/functional/4-demo/Demo.scss
+++ b/src/components/functional/4-demo/Demo.scss
@@ -19,7 +19,7 @@
       --radio-fill: #fff;
       display: inline-flex;
       position: relative;
-      z-index: 99999;
+      z-index: 99;
       &:nth-child(2) {
         border-color: light-dark(#000, #000);
       }
